Letter from the CEO: Ensure appropriate padding on mobile

--- a/src/patterns/letter-from-the-ceo/frontend.scss
+++ b/src/patterns/letter-from-the-ceo/frontend.scss
@@ -1,4 +1,6 @@
 .wmf-pattern-letter-from-the-ceo {
+	padding-left: 1.25rem;
+	padding-right: 1.25rem;
 
 	> .wp-block-group__inner-container {
 		max-width: 646px;
